@@ -22,7 +22,7 @@ debug_emalloc(
 	char *mem;
 
 	if ((mem = (char *)_malloc_dbg(size, _NORMAL_BLOCK, filename, line)) == 0) {
-		msyslog(LOG_ERR, "No more memory!");
+		msyslog(LOG_ERR, "Exiting: No more memory!");
 		exit(1);
 	}
 	return mem;
@@ -38,7 +38,7 @@ emalloc(
 	char *mem;
 
 	if ((mem = (char *)malloc(size)) == 0) {
-		msyslog(LOG_ERR, "No more memory!");
+		msyslog(LOG_ERR, "Exiting: No more memory!");
 		exit(1);
 	}
 	return mem;
